testsuite/tests/saks/should_fail/saks_fail020.stderr

saks_fail020.hs:9:49: error:
    • Expected kind ‘k1’, but ‘a’ has kind ‘k’
      ‘k’ is a rigid type variable bound by
        the instance declaration
        at saks_fail020.hs:9:14-55
      ‘k1’ is a rigid type variable bound by
        an explicit forall (k :: Type)
        at saks_fail020.hs:9:28
    • In the first argument of ‘Proxy’, namely ‘(a :: k)’
      In a standalone kind signature for ‘Foo2’:
        () -> forall (k :: Type) -> Proxy (a :: k)
